--- a/package.json
+++ b/package.json
@@ -1,8 +1,15 @@
 {
   "dependencies": {
-    "json-server": "^0.17.0"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "json-server": "^0.17.0",
+    "mysql2": "^2.3.3"
   },
   "scripts": {
-    "start": "json-server --watch ./src/js/db.json"
+    "start": "json-server --watch ./src/js/db.json",
+    "dev": "nodemon ./src/js/index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
